# cpp_projects

./: README.md
BMinor-Compiler/: README.md
image_renderer/: CMakeLists.txt  README.md  RenderOffScreen.cpp  RenderOffScreen.h  data.csv  main.cpp  renderegl.cpp  renderegl.h  renderegl2.cpp  renderegl2.h  trianglerenderer.cpp  trianglerenderer.h  uncrustify.cfg
model_runner/: .gitignore  README.md  config.ini  main.py  manager.py  model_runner.py  requirements.txt  rest_APIs.py  rest_client.py  websocket_notification.py  websocket_streaming.py
model_runner/predict/: ML_swirl_angle.h5  comp_is_eff.py  corrected_power.py  countdown_percentage.py  input data small.xlsx  kks_dictionary.py  main.py  main_dashboard.py  power_prediction.py  readme.txt  swirl_angle.py  thermocouple_spread.py
opcua_datastreamer/: .gitignore  README.md  input_data.xlsx  main.py  node_info.txt  requirements.txt
packman/: README.md
semi_redis/: CMakeLists.txt  README.md  client.cpp  server.cpp
space_invaders/: Enemy.cpp  Fire.h  Game.cpp  Player.h  README.md  SpaceInvaders.pro  Wall.cpp  resource.qrc  setwalls.cpp
space_invaders/include/: Bullet.h  Enemy.h  Game.h  Health.h  Score.h  Wall.h
space_invaders/src/: Bullet.cpp  Fire.cpp  Health.cpp  Player.cpp  Score.cpp  main.cpp
udp_data_generator/: README.md  dachartview.h  datagenerator.cpp  datagenerator.h  mainwindow.h  sensorwidget.cpp  udp.h
udp_data_generator/chart/: chart.h
udp_datagenerator/: CMakeLists.txt  README.md  dachartview.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  sensorwidget.h  sensorwidget.ui  udp.cpp
(+2 files in other folders)
